# ecommerce-order-intelligence-platform

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
apps/: streaming.py
config/: airflow.cfg
dags/: s3_to_snowflake.py
producer/: data_generate.py  producer.py
