[project]
name = "ecommerce-streaming"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow>=3.2.1",
    "apache-airflow-providers-amazon>=9.29.0",
    "apache-airflow-providers-snowflake>=6.13.0",
    "dotenv>=0.9.9",
    "faker>=40.19.1",
    "kafka-python>=2.3.1",
    "pyspark>=4.1.2",
]
